--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes":[
         {
-            "src":"./app",
-            "dest":"routes.py"
+            "src":"./(.*)",
+            "dest":"./run.py"
         }
     ]
 }
